force-app/main/default/objects/FinServ__CustomFieldSet__mdt/FinServ__CustomFieldSet__mdt.object-meta.xml
<CustomObject>
    <description
  >Defines field sets for objects that do not support field sets by default.</description>
    <label>CustomFieldSet</label>
    <pluralLabel>CustomFieldSets</pluralLabel>
</CustomObject>