force-app/main/default/objects/FinServ__CustomFieldSet__mdt/fields/FinServ__ExcludedFields__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ExcludedFields__c</fullName>
    <label>Excluded Fields</label>
    <type>TextArea</type>
</CustomField>