force-app/main/default/objects/FinServ__CustomFieldSet__mdt/fields/FinServ__TwoColumnLayout__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TwoColumnLayout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Column Layout</label>
    <type>Checkbox</type>
</CustomField>